--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Get It: The e-commerce spot for your shopping needs!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.8.10/tailwind.css" integrity="sha512-xPDJc5gGz4PQgR6iA8SoMEWPKAKJ+m7z9RHG0TPDJBLaHDoQAzT7sAZTpxcpZX6Caw4ZYHlrtYJ8XybLzq5DTw==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
